# pass-git-helper

./: .gitignore  .markdownlintrc  .releaserc.json  .travis.yml  README.md  package-lock.json  package.json  pass-git-helper  passgithelper.py  pyproject.toml  renovate.json  requirements-check.txt  setup.cfg  setup.py  test_passgithelper.py  tox.ini
.github/workflows/: ci.yml
test_data/dummy-password-store/git/: github.com.gpg  gitlab.com.gpg
test_data/dummy-password-store/git/example.com/: user1.gpg  user2.gpg
test_data/dummy-password-store/git/github.com/: user1.gpg  user2.gpg
test_data/dummy-password-store/git/gitlab.com/: user1.gpg  user2.gpg
test_data/entry-name-extraction/: git-pass-mapping.ini
test_data/password_store_dir/: git-pass-mapping.ini
test_data/regex-extraction/: git-pass-mapping.ini
test_data/regex-password-extraction/: git-pass-mapping.ini
test_data/smoke/: git-pass-mapping.ini
test_data/template-insertion/: git-pass-mapping.ini
test_data/unknown-password-extractor/: git-pass-mapping.ini
test_data/unknown-username-extractor/: git-pass-mapping.ini
test_data/unknown-username-inserter/: git-pass-mapping.ini
test_data/wildcard/: git-pass-mapping.ini
test_data/wildcard_path/: git-pass-mapping.ini
test_data/with-encoding/: git-pass-mapping.ini
test_data/with-invalid-mapping/: git-pass-mapping.ini
test_data/with-path/: git-pass-mapping.ini
test_data/with-protocol/: git-pass-mapping.ini
test_data/with-username/: git-pass-mapping.ini
test_data/with-username-skip/: git-pass-mapping.ini
