[build-system]
requires = ["setuptools", "wheel"]

[tool.ruff]
src = ["src"]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "D",
    "ANN",
    "S",
    # "BLE",
    "B",
    "A",
    "C4",
    "T10",
    "DTZ",
    "EXE",
    "ISC",
    "G",
    "PIE",
    "T20",
    "PT",
    "Q",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "TRY",
    "RUF",
]
ignore = [
    # Not available in all supported Python versions
    "B905",
    # Black will handle this
    "E501",
    # Do not require docstrings everywhere
    "D1",
    # No need to add type annotation to self and cls
    "ANN10",
    # Allow Any
    "ANN401",
    # We use assert only for documentation purposes and debugging.
    "S101",
    # We need this here
    "S603",
    "S607",
    # I don't like this style
    "TRY300",
    # Gives some readability sometimes, No need to prevent this style
    "RET505",
    # This is the style used in this project.
    "TID252",
    # Will be fixed lated.
    "TRY003",
    "TRY301",
]

[tool.ruff.lint.per-file-ignores]
"test_passgithelper.py" = [
    # Allow hard-coded passwords in tests
    "S105",
    "S106",
    # Allow potentially insecure temp directory access
    "S108",
    # Sometimes needed for the current tests
    "SLF",
]
"src/autosuspend/checks/ical.py" = [
    # Terrible hack accessing internal members required to handle rrules correctly.
    "SLF001",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
