[metadata]
name = pass-git-helper
version = attr: passgithelper.__version__
author  =  Johannes Wienke
author_email = languitar@semipol.de
description = A git credential helper interfacing with pass, the standard Unix password manager
license = LGPLv3+
keywords =
    git
    passwords
    pass
    credentials
    password store
classifiers =
    Programming Language :: Python :: 3
    Topic :: Utilities
    License :: OSI Approved ::
    GNU Lesser General Public License v3 or later (LGPLv3+)
project_urls =
    home_page = https://github.com/languitar/pass-git-helper

[options]
install_requires =
    pyxdg
py_modules =
    passgithelper

[options.extras_require]
test = pytest; pytest-coverage; pytest-mock

[options.entry_points]
console_scripts =
    pass-git-helper = passgithelper:main

[tool:pytest]
log_level = DEBUG
addopts =
    --cov-config=setup.cfg

[flake8]
exclude =
    doc,
    .tox,
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    env,
    .mypy_cache
ignore =
    ANN101,
    ANN102,
    D202,
    D413,
    E203,
    S101,
    S404,
    TYP101,
    TYP102,
    TYP002,
    TYP003,
    W503,
per-file-ignores =
    test_*: D1, S105, ANN401
    setup.py: D1
max-line-length = 88

[coverage:run]
branch = True
source = passgithelper

[coverage:paths]
source =
    .
    */site-packages/

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if __name__ == "__main__":
    @abc.abstractmethod

[mypy]
ignore_missing_imports=True
disallow_untyped_defs = True
check_untyped_defs = True
no_implicit_optional = True
warn_unused_configs = True
warn_unused_ignores = True

[isort]
profile = google
known_local_folder = tests
case_sensitive = false
combine_as_imports = true
force_single_line = false
multi_line_output = 3
include_trailing_comma = true
lines_after_imports = 2
line_length = 88
force_grid_wrap = false
reverse_relative = true
